--- a/.gitignore
+++ b/.gitignore
@@ -106,4 +106,8 @@ ENV/
 .idea/
 
 # autolab SDK card
-src/mischbares/config/autolab_configuration/*
+mischbares/config/autolab_configuration/*
+
+
+# ignore the history
+.history
