Added first db classes and tests

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,6 @@ mischbares/visualizer/*
 
 # add procedure instruction files
 mischbares/config/electrochemical_procedures/*
+
+# Config ini
+mischbares/db/config.ini
