--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install sphinx==4.5.0 sphinx_rtd_theme numpy pandas matplotlib uvicorn pydantic h5py dotenv clr pytest pydantic
+        pip install sphinx==4.5.0 sphinx_rtd_theme numpy pandas matplotlib uvicorn pydantic h5py python-dotenv clr pytest pydantic
 
     - name: Build Documentation
       run: |
